added swagger docs for user and profile
